miss-alignement of dropdown corrected

--- a/chatBotProjet/public/css/chatbox.css
+++ b/chatBotProjet/public/css/chatbox.css
@@ -38,7 +38,6 @@
 
 .chatbox__title {
     min-height: 50px;
-    padding-right: 10px;
     background-color: #1f2836cc;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
